--- a/style.css
+++ b/style.css
@@ -37,7 +37,7 @@ body * {
   width: 100%;
   max-width: 588px;
   position: center;
-  margin: 56px auto 0px;
+  margin: 0px auto 0px;
   padding: 0 24px;
 }
 
@@ -135,7 +135,7 @@ ul li a:hover {
 
 #social-links {
   display: flex;
-  padding: 24px 0;
+  /* padding: 8px 0; */
   justify-content: center;
   font-size: 24px;
 }
